add workflow webhooks

--- a/notebooks/ngrok_setup.ipynb
+++ b/notebooks/ngrok_setup.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "bfd803d2",
    "metadata": {},
    "outputs": [
@@ -53,6 +53,27 @@
      "output_type": "stream",
      "text": [
       " * ngrok tunnel \"https://77cde1db9c5f.ngrok-free.app\" -> \"http://127.0.0.1:5678\"\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "t=2025-07-23T12:09:57+0800 lvl=eror msg=\"heartbeat timeout, terminating session\" obj=tunnels.session obj=csess id=92e8450c2b05 clientid=2dff1b90957715806d43975d5db1e6de\n",
+      "t=2025-07-23T12:09:57+0800 lvl=eror msg=\"session closed, starting reconnect loop\" obj=tunnels.session obj=csess id=3f97680b0ef5 err=\"session closed\"\n",
+      "t=2025-07-23T12:18:23+0800 lvl=eror msg=\"failed to reconnect session\" obj=tunnels.session err=\"failed to send authentication request: read tcp 192.168.50.13:56387->3.12.62.205:443: read: connection reset by peer\"\n",
+      "t=2025-07-23T12:33:15+0800 lvl=eror msg=\"session closed, starting reconnect loop\" obj=tunnels.session obj=csess id=3f97680b0ef5 err=\"read tcp 192.168.50.13:56399->3.12.62.205:443: read: connection reset by peer\"\n",
+      "t=2025-07-23T13:07:08+0800 lvl=eror msg=\"session closed, starting reconnect loop\" obj=tunnels.session obj=csess id=3f97680b0ef5 err=\"read tcp 192.168.50.13:56440->3.12.62.205:443: read: connection reset by peer\"\n",
+      "t=2025-07-23T13:07:14+0800 lvl=eror msg=\"heartbeat timeout, terminating session\" obj=tunnels.session obj=csess id=e9fb7dc7ba89 clientid=2dff1b90957715806d43975d5db1e6de\n",
+      "t=2025-07-23T13:24:25+0800 lvl=eror msg=\"session closed, starting reconnect loop\" obj=tunnels.session obj=csess id=3f97680b0ef5 err=\"read tcp 192.168.50.13:56530->3.12.62.205:443: read: connection reset by peer\"\n",
+      "t=2025-07-23T13:24:28+0800 lvl=eror msg=\"heartbeat timeout, terminating session\" obj=tunnels.session obj=csess id=52686faf2aee clientid=2dff1b90957715806d43975d5db1e6de\n",
+      "t=2025-07-23T13:47:28+0800 lvl=eror msg=\"session closed, starting reconnect loop\" obj=tunnels.session obj=csess id=3f97680b0ef5 err=\"read tcp 192.168.50.13:56578->3.134.73.173:443: read: connection reset by peer\"\n",
+      "t=2025-07-23T13:47:32+0800 lvl=eror msg=\"heartbeat timeout, terminating session\" obj=tunnels.session obj=csess id=49828360a9d9 clientid=2dff1b90957715806d43975d5db1e6de\n",
+      "t=2025-07-23T13:55:01+0800 lvl=eror msg=\"session closed, starting reconnect loop\" obj=tunnels.session obj=csess id=3f97680b0ef5 err=\"read tcp 192.168.50.13:56649->3.134.73.173:443: read: connection reset by peer\"\n",
+      "t=2025-07-23T13:55:08+0800 lvl=eror msg=\"heartbeat timeout, terminating session\" obj=tunnels.session obj=csess id=64a481d8138a clientid=2dff1b90957715806d43975d5db1e6de\n",
+      "t=2025-07-23T13:55:20+0800 lvl=eror msg=\"heartbeat timeout, terminating session\" obj=tunnels.session obj=csess id=6393e7cc38bb clientid=2dff1b90957715806d43975d5db1e6de\n",
+      "t=2025-07-23T13:59:04+0800 lvl=eror msg=\"heartbeat timeout, terminating session\" obj=tunnels.session obj=csess id=ce942fd5ffd4 clientid=2dff1b90957715806d43975d5db1e6de\n",
+      "t=2025-07-23T13:59:04+0800 lvl=eror msg=\"session closed, starting reconnect loop\" obj=tunnels.session obj=csess id=3f97680b0ef5 err=\"session closed\"\n"
      ]
     }
    ],
