--- a/notebooks/0. test_mcp_deployment.ipynb
+++ b/notebooks/0. test_mcp_deployment.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "68f15b38",
+   "metadata": {},
+   "source": [
+    "When running an asynchronous process within Jupyter Notebook (also an asynchronous process), do use nest_asyncio to avoid any async-nesting issues."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "31886d86",
@@ -12,15 +20,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7bf4aea7",
+   "metadata": {},
+   "source": [
+    "Invoke the SSE endpoint using FastMCP"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d8a83b02",
    "metadata": {},
    "outputs": [],
    "source": [
     "from fastmcp import Client\n",
     "from fastmcp.client.transports import SSETransport\n",
-    "\n",
     "\n",
     "async with Client(SSETransport(\"http://localhost:3000/sse\")) as client:\n",
     "    tools = await client.list_tools()"
@@ -98,14 +113,6 @@
     "\n",
     "display(Markdown(result.content[0].text))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aae4c026",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
