--- a/notebooks/1. ngrok_setup.ipynb
+++ b/notebooks/1. ngrok_setup.ipynb
@@ -12,6 +12,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "639a615d",
+   "metadata": {},
+   "source": [
+    "## Serving a localhost URL to the public domain using ngrok!\n",
+    "\n",
+    "First you'll have to sign up for a [free ngrok account](https://ngrok.com/) and get an ngrok authenticaion token. \n",
+    "> Note that all free ngrok websites will only stay alive for **4 hours**!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "15371c3a",
@@ -91,8 +102,8 @@
    "id": "bc397bbf",
    "metadata": {},
    "source": [
-    "Now run\n",
-    "`docker-compose up -d`"
+    "## Now spin up your n8n service\n",
+    "In your terminal, run: `docker-compose up -d`"
    ]
   }
  ],
