add images into notebooks

--- a/notebooks/1. ngrok_setup.ipynb
+++ b/notebooks/1. ngrok_setup.ipynb
@@ -19,7 +19,7 @@
     "## Serving a localhost URL to the public domain using ngrok!\n",
     "\n",
     "First you'll have to sign up for a [free ngrok account](https://ngrok.com/) and get an ngrok authenticaion token. \n",
-    "> Note that all free ngrok websites will only stay alive for **4 hours**!"
+    "> Note that all free ngrok websites will only stay alive for **4 hours**! You only need this part if you're intending to call Google's APIs (like me) in one of my workflows"
    ]
   },
   {
