--- a/notebooks/3. call_n8n_api.ipynb
+++ b/notebooks/3. call_n8n_api.ipynb
@@ -118,7 +118,9 @@
    "id": "c78f75a4",
    "metadata": {},
    "source": [
-    "## This is what happens when the webhook responds only after the last node has executed"
+    "## This is what happens when the webhook responds only after the last node has executed\n",
+    "\n",
+    "The execution took less than 1 minute!"
    ]
   },
   {
